 - Fixed CZE Skoda Superb bills ideas not properly removing themselves when paying off the bills
 - Fixed CZE Increase Eastern Trade focus not possible to complete as Czechoslovakia
 - Fixed the God of War not properly giving Army, Air, Naval Experience every month
 - Fixed the weird gap in the "Pansarregementen" division template

 Balance:
  - Rebalanced the organization of the zombie units so they play a little differently rather then having permanent organization
  - Zombies in the Zombie game mode should now spawn more units depending on the difficulty
  - You can now set 8 Headquarters instead of 3 for naval headquarters
  - Netherlands no longer can achieve mega stonks of 30%+ ROI from the Grey Dilemma decisions
  - Modified the Iranian infantry brigade template (Tip-e Piade Nezam) to be manned by light infantry and not motorized
  - Reduced the naval dominance required for sea zones by 15% so it is easier to achieve naval dominance in areas
  - Increased the naval dominance gain from Frigates from 20 to 25
  - Increased the naval dominance gain from Stealth Frigates from 25 to 30
  - Made the Railguns for ships more devastating in ship to ship combat and slightly reduced their IC cost so they're more worthwhile to incorporate on heavier ship classes
  - Slightly increased the Pre-Accession Program Political Power gain to 400 from 360
  - Reduced the Air Wing Volunteer cap in several nations who currently had unlimited air volunteers
  - Replaced a pointless doctrine cost reduction in American focus "Adaptive Tactics" with mastery gain
  - Increased the interest reduction in Swedish Focusses
  - Increased the multiplication cost of nuclear reactors as they're much stronger due to the naval dominance mechanic now
  - Reduced the amount paid in Raid Reparations to 2% from 3%
  - Clamped the total amount of billed reparations to $150 Billion
  - Changed modules of Polish naval vessels to better reflect their real life counterparts from 2000