@@ -3259,7 +3259,7 @@ ideas = {
 			picture = neutrality2
 			modifier = {
 				stability_factor = 0.04
-				female_random_country_leader_chance = -0.01
+				female_random_country_leader_chance = -0.04
 				party_popularity_stability_factor = -0.03
 				monthly_population = 0.03
 				conscription_factor = -0.05
