@@ -780,7 +780,7 @@ ideas = {
 			picture = "liberalism"
 
 			modifier = {
-				female_random_country_leader_chance = 50
+				female_random_country_leader_chance = 0.5
 				democratic_drift = 0.2
 			}
 		}
