@@ -1966,6 +1966,10 @@ SOV = {
 			"GFX_portrait_russia_general_15"
 			"GFX_portrait_russia_general_16"
 		}
+		female = {
+			"GFX_portrait_europe_general_female_1"
+			"GFX_portrait_europe_general_female_2"
+		}
 	}
 }
 ### Belarus ###
