@@ -38,6 +38,7 @@ v1.12.3b
  - Fixed CZE Increase Eastern Trade focus not possible to complete as Czechoslovakia
  - Fixed the God of War not properly giving Army, Air, Naval Experience every month
  - Fixed the weird gap in the "Pansarregementen" division template
+ - Fixed a handful of issues regarding female leaders of all types randomly bugging
 
  Balance:
   - Rebalanced the organization of the zombie units so they play a little differently rather then having permanent organization
